tests/base/parser/bad/stmts_t-match-spid-with-bar-cid-cid-with.scilla
scilla_version 0

library TestLib

type T =
| C

let a = let x = C in Some { T } x

contract Test
()

transition arbitrary ()
  match a with
  | Some C -> accept
  end
end  
